# changelog-gen

./: .clog.yaml  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.dev.txt  requirements.txt
src/cc_changelog_gen/: app.py
