[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "src/cc_changelog_gen/_version.py"

[project]
name = "cc-changelog-gen"
dynamic = ["version"]
description = "Conventional Commit Changelog Generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {email = "no_reply@dsaid.gov.sg"},
  {name = "DSAID"}
]
dependencies = [
  "GitPython~=3.1.32",
  "PyYAML~=6.0.1",
]

[project.optional-dependencies]
dev = [
  "black~=23.7.0",
]

[project.urls]
repository = "https://github.com/dsaidgovsg/cc-changelog-gen.git"

[project.entry-points.console_scripts]
cc-changelog-gen = "cc_changelog_gen.app:main"
