[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]

[project]
name = "cc-changelog-gen"
dynamic = ["version"]
description = "Conventional Commit Changelog Generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {email = "no_reply@dsaid.gov.sg"},
  {name = "DSAID"}
]
dependencies = [
  "GitPython~=3.1.32",
  "pydantic-settings~=2.5.2",
  "semver~=3.0.1",
]

[project.optional-dependencies]
dev = [
  "black~=23.7.0",
]

[project.urls]
repository = "https://github.com/dsaidgovsg/cc-changelog-gen.git"

[project.entry-points.console_scripts]
cc-changelog-gen = "cc_changelog_gen.app:main"
